--- a/src/app/components/recursos/recurso-comunitario/crear-recurso-comunitario/crear-recurso-comunitario.component.html
+++ b/src/app/components/recursos/recurso-comunitario/crear-recurso-comunitario/crear-recurso-comunitario.component.html
@@ -41,7 +41,7 @@
       </div>
       <div class="form-group mb-3 row">
         <label for="tipo_recursos_comunitario" class="form-label text-start p-0">Tipo de recurso comunitario</label>
-        <div class="col-12 col-lg-9  p-0 pb-1 pb-lg-0">
+        <div class="col-12 col-lg  p-0 pb-1 pb-lg-0">
           <ng-select id="tipo_recursos_comunitario" name="tipo_recurso_comunitario" formControlName="tipo_recursos_comunitario">
             <!-- La variable tipo_recurso_comunitario será iterada y se mostrarán todos los tipos de recursos comunitarios -->
             <ng-option *ngFor="let tipo_recurso_comunitario of tipos_recursos_comunitarios"
@@ -55,26 +55,27 @@
             </div>
           </div>
         </div>
+        <ng-container *ngIf="this.isAdmin">
+          <div class="col-4 col-lg-1 p-0">
+            <button class="btn btn-success botonOperacion" type="button" (click)="mostratCrearTipo()"
+                    data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
+              <i class="fa fa-solid fa-plus"></i>
+            </button>
+          </div>
 
-        <div class="col-4 col-lg-1 p-0">
-          <button class="btn btn-success botonOperacion" type="button" (click)="mostratCrearTipo()"
-                  data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
-            <i class="fa fa-solid fa-plus"></i>
-          </button>
-        </div>
+          <div class="col-4 col-lg-1  p-0">
+            <button [disabled]="botonDes()" class="btn btn-warning botonOperacion" id="des1" type="button" (click)="mostrarEditarTipo()"
+                    data-bs-toggle="collapse" data-bs-target="#collapseWidthExample2" aria-expanded="false" aria-controls="collapseWidthExample2">
+              <i class="fa fa-sharp fa-solid fa-pen fa-sm"></i>
+            </button>
+          </div>
 
-        <div class="col-4 col-lg-1  p-0">
-          <button [disabled]="botonDes()" class="btn btn-warning botonOperacion" id="des1" type="button" (click)="mostrarEditarTipo()"
-                  data-bs-toggle="collapse" data-bs-target="#collapseWidthExample2" aria-expanded="false" aria-controls="collapseWidthExample2">
-            <i class="fa fa-sharp fa-solid fa-pen fa-sm"></i>
-          </button>
-        </div>
-
-        <div class="col-4 col-lg-1  p-0">
-          <button [disabled]="botonDes()" class="btn btn-danger botonOperacion" id="des2" type="button" (click)="modalConfirmacion()">
-            <i class="fa fa-solid fa-trash"></i>
-          </button>
-        </div>
+          <div class="col-4 col-lg-1  p-0">
+            <button [disabled]="botonDes()" class="btn btn-danger botonOperacion" id="des2" type="button" (click)="modalConfirmacion()">
+              <i class="fa fa-solid fa-trash"></i>
+            </button>
+          </div>
+        </ng-container>
       </div>
       <div class="form-group mb-3">
         <label for="localidad" class="form-label">Localidad</label>
